--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,35 @@
-<p>signup works!</p>
+<section>
+  <form fxLayoutGap="10px" fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <mat-form-field>
+      <input matInput
+      type="email"
+      placeholder="Email"
+      ngModel
+      name="email"
+      email
+      required
+      #emailInput="ngModel">
+      <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
+      <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid!!</mat-error>
+    </mat-form-field>
+    <mat-form-field hintLabel="Should be 6 characters long.">
+      <input matInput
+      type="password"
+      placeholder="Password"
+      ngModel
+      name="password"
+      required
+      minlength="6"
+      #pwInput="ngModel">
+      <mat-hint align="end"> {{pwInput.value?.length}} / 6</mat-hint>
+      <mat-error *ngIf="emailInput.hasError('minlength')">Must be at least 6 characters long!</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput ngModel name="birthdate" required placeholder="Your Birthdate" [matDatepicker]="picker" [max]="maxDate">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker ></mat-datepicker>
+    </mat-form-field>
+      <mat-checkbox color="primary" ngModel name="agree" required>Agree to Terms and Conditions.</mat-checkbox>
+    <button [disabled]="f.invalid" type="submit" mat-raised-button color="primary">Submit</button>
+  </form>
+</section>
