--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,47 @@
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sideNav role="navigation">
+    <mat-nav-list>
+        <a mat-list-item routerLink="/signup" (click)="sideNav.close()">
+          <mat-icon>face</mat-icon>
+          <span class="nav-cap">Signup</span>
+        </a>
+        <a mat-list-item routerLink="/login" (click)="sideNav.close()">
+          <mat-icon>input</mat-icon>
+          <span class="nav-cap">Login</span>
+        </a>
+        <a mat-list-item routerLink="/training" (click)="sideNav.close()">
+          <mat-icon>fitness_center</mat-icon>
+          <span class="nav-cap">Training</span>
+        </a>
+        <mat-list-item>
+            <button mat-icon-button (click)="sideNav.close()">
+                <mat-icon>eject</mat-icon>
+                <span class="nav-cap">Logout</span>
+              </button>
+        </mat-list-item>
+
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <div fxHide.gt-xs>
+        <button mat-icon-button (click)="sideNav.toggle()">
+          <mat-icon>menu</mat-icon>
+      </button>
+      </div>
+      <div><a routerLink="/">Logo</a></div>
+      <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
+        <ul fxLayout fxLayoutGap="10px" class="nav-items">
+          <li><a routerLink="/signup">Signup</a></li>
+          <li><a routerLink="/login">Login</a></li>
+          <li><a routerLink="/training">Training</a></li>
+          <li><a>Logout</a></li>
+        </ul>
+      </div>
+    </mat-toolbar>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+
+  </mat-sidenav-content>
+</mat-sidenav-container>
