--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -9,3 +9,13 @@ a {
   }
 }
 
+.nav-items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-cap{
+  display: inline-block;
+  padding-left: 6px;
+}
