--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,27 +1,20 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
+  <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
   <mat-card fxFlex.xs="100%" fxFlex="400px">
     <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
     <mat-card-content fxLayoutAlign="center">
       <mat-form-field>
-        <mat-label>Favorite food</mat-label>
-        <mat-select>
-          <mat-option value="crunches">
-            Crunches
+        <mat-label>Exercise</mat-label>
+        <mat-select required ngModel name="exercise" placeholder="Exercises">
+          <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
+            {{exercise.name}}
           </mat-option>
-          <mat-option value="touch toes">
-            Touch Toes
-          </mat-option>
-          <mat-option value="side-lunges">
-            Side Lunges
-          </mat-option>
-          <mat-option value="burpees">
-              Burpees
-            </mat-option>
         </mat-select>
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions fxLayoutAlign="center">
-      <button type="submit" mat-button (click)="onStartTraining()">Start</button>
+      <button type="submit" mat-button [disabled]="f.invalid">Start</button>
     </mat-card-actions>
   </mat-card>
+</form>
 </section>
