--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -33,3 +33,11 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
+
+
+<div fxLayoutAlign="center center">
+    <mat-paginator
+              [pageSize]="1"
+              [pageSizeOptions]="[1, 5, 10, 20]">
+</mat-paginator>
+</div>
