--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -6,7 +6,7 @@
       <mat-form-field>
         <mat-label>Exercise</mat-label>
         <mat-select required ngModel name="exercise" placeholder="Exercises">
-          <mat-option [value]="exercise.id" *ngFor="let exercise of exercises | async">
+          <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
             {{exercise.name}}
           </mat-option>
         </mat-select>
