--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,8 @@
       formControlName="password">
       <mat-error *ngIf="password.hasError('required')">Field must not be empty</mat-error>
     </mat-form-field>
-    <button [disabled]="!loginForm.valid" type="submit" mat-raised-button color="primary">Submit</button>
+    <button *ngIf="!isLoading" [disabled]="!loginForm.valid" type="submit" mat-raised-button color="primary">Submit</button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
 
