--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -30,6 +30,7 @@
       <mat-datepicker #picker ></mat-datepicker>
     </mat-form-field>
       <mat-checkbox color="primary" ngModel name="agree" required>Agree to Terms and Conditions.</mat-checkbox>
-    <button [disabled]="f.invalid" type="submit" mat-raised-button color="primary">Submit</button>
+    <button *ngIf="!isLoading" [disabled]="f.invalid" type="submit" mat-raised-button color="primary">Submit</button>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
