--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,7 +5,7 @@
     <mat-card-content fxLayoutAlign="center">
       <mat-form-field>
         <mat-label>Exercise</mat-label>
-        <mat-select required ngModel name="exercise" placeholder="Exercises">
+        <mat-select *ngIf="!isLoading" required ngModel name="exercise" placeholder="Exercises">
           <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
             {{exercise.name}}
           </mat-option>
@@ -13,7 +13,8 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions fxLayoutAlign="center">
-      <button type="submit" mat-button [disabled]="f.invalid">Start</button>
+      <button *ngIf="!isLoading" type="submit" mat-button [disabled]="f.invalid">Start</button>
+      <mat-spinner *ngIf="isLoading"></mat-spinner>
     </mat-card-actions>
   </mat-card>
 </form>
