--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,16 +5,17 @@
     <mat-card-content fxLayoutAlign="center">
       <mat-form-field>
         <mat-label>Exercise</mat-label>
-        <mat-select *ngIf="!isLoading" required ngModel name="exercise" placeholder="Exercises">
+        <mat-select *ngIf="!isLoading && exercises" required ngModel name="exercise" placeholder="Exercises">
           <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
             {{exercise.name}}
           </mat-option>
         </mat-select>
       </mat-form-field>
     </mat-card-content>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
     <mat-card-actions fxLayoutAlign="center">
-      <button *ngIf="!isLoading" type="submit" mat-button [disabled]="f.invalid">Start</button>
-      <mat-spinner *ngIf="isLoading"></mat-spinner>
+      <button *ngIf="exercises" type="submit" mat-button [disabled]="f.invalid">Start</button>
+      <button *ngIf="!exercises" type="submit" mat-button (click)="fetchExercises()">Fetch Again</button>
     </mat-card-actions>
   </mat-card>
 </form>
