--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,9 +3,9 @@
   <mat-card fxFlex.xs="100%" fxFlex="400px">
     <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
     <mat-card-content fxLayoutAlign="center">
-      <mat-form-field>
+      <mat-form-field *ngIf="!isLoading && exercises" >
         <mat-label>Exercise</mat-label>
-        <mat-select *ngIf="!isLoading && exercises" required ngModel name="exercise" placeholder="Exercises">
+        <mat-select required ngModel name="exercise" placeholder="Exercises">
           <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
             {{exercise.name}}
           </mat-option>
