--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -37,7 +37,7 @@
 
 <div fxLayoutAlign="center center">
     <mat-paginator
-              [pageSize]="1"
-              [pageSizeOptions]="[1, 5, 10, 20]">
+              [pageSize]="5"
+              [pageSizeOptions]="[5, 10, 20]">
 </mat-paginator>
 </div>
