--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,7 +3,7 @@
   <mat-card fxFlex.xs="100%" fxFlex="400px">
     <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
     <mat-card-content fxLayoutAlign="center">
-      <mat-form-field *ngIf="!isLoading && exercises" >
+      <mat-form-field *ngIf="exercises && !(isLoading$ | async)" >
         <mat-label>Exercise</mat-label>
         <mat-select required ngModel name="exercise" placeholder="Exercises">
           <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
@@ -11,9 +11,10 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+      <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
     </mat-card-content>
-    <mat-spinner *ngIf="isLoading"></mat-spinner>
-    <mat-card-actions fxLayoutAlign="center">
+
+    <mat-card-actions fxLayoutAlign="center" *ngIf="(!isLoading$ | async)">
       <button *ngIf="exercises" type="submit" mat-button [disabled]="f.invalid">Start</button>
       <button *ngIf="!exercises" type="submit" mat-button (click)="fetchExercises()">Fetch Again</button>
     </mat-card-actions>
