--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-    <a *ngIf="!isAuth" mat-list-item routerLink="/signup" (click)="onClose()">
+    <a *ngIf="!(isAuth$ | async)" mat-list-item routerLink="/signup" (click)="onClose()">
       <mat-icon>face</mat-icon>
       <span class="nav-cap">Signup</span>
     </a>
-    <a *ngIf="!isAuth" mat-list-item routerLink="/login" (click)="onClose()">
+    <a *ngIf="!(isAuth$ | async)" mat-list-item routerLink="/login" (click)="onClose()">
       <mat-icon>input</mat-icon>
       <span class="nav-cap">Login</span>
     </a>
-    <a *ngIf="isAuth" mat-list-item routerLink="/training" (click)="onClose()">
+    <a *ngIf="isAuth$ | async" mat-list-item routerLink="/training" (click)="onClose()">
       <mat-icon>fitness_center</mat-icon>
       <span class="nav-cap">Training</span>
     </a>
-    <mat-list-item *ngIf="isAuth">
+    <mat-list-item *ngIf="isAuth$ | async">
         <button mat-icon-button (click)="logout()">
             <mat-icon>eject</mat-icon>
             <span class="nav-cap" >Logout</span>
