--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -14,7 +14,7 @@
       <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
     </mat-card-content>
 
-    <mat-card-actions fxLayoutAlign="center" *ngIf="(!isLoading$ | async)">
+    <mat-card-actions fxLayoutAlign="center" *ngIf="!(isLoading$ | async)">
       <button *ngIf="exercises" type="submit" mat-button [disabled]="f.invalid">Start</button>
       <button *ngIf="!exercises" type="submit" mat-button (click)="fetchExercises()">Fetch Again</button>
     </mat-card-actions>
