--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,10 +3,10 @@
   <mat-card fxFlex.xs="100%" fxFlex="400px">
     <mat-card-title fxLayoutAlign="center">Time to start a workout</mat-card-title>
     <mat-card-content fxLayoutAlign="center">
-      <mat-form-field *ngIf="exercises && !(isLoading$ | async)" >
+      <mat-form-field *ngIf="(exercises$ | async) && !(isLoading$ | async)" >
         <mat-label>Exercise</mat-label>
         <mat-select required ngModel name="exercise" placeholder="Exercises">
-          <mat-option [value]="exercise.id" *ngFor="let exercise of exercises">
+          <mat-option [value]="exercise.id" *ngFor="let exercise of exercises$ | async">
             {{exercise.name}}
           </mat-option>
         </mat-select>
@@ -15,8 +15,8 @@
     </mat-card-content>
 
     <mat-card-actions fxLayoutAlign="center" *ngIf="!(isLoading$ | async)">
-      <button *ngIf="exercises" type="submit" mat-button [disabled]="f.invalid">Start</button>
-      <button *ngIf="!exercises" type="submit" mat-button (click)="fetchExercises()">Fetch Again</button>
+      <button *ngIf="exercises$ | async" type="submit" mat-button [disabled]="f.invalid">Start</button>
+      <button *ngIf="!(exercises$ | async)" type="submit" mat-button (click)="fetchExercises()">Fetch Again</button>
     </mat-card-actions>
   </mat-card>
 </form>
